update 03062022 1717 CASC
